--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "custom-login",
-  "version": "0.0.0",
+  "name": "catch-ex",
+  "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "serve -l 3000",
-    "helpi": "serve --help",
+    "start": "http-server -p 3000",
     "test": "node test.js"
   },
   "author": "Auth0",
   "license": "MIT",
   "dependencies": {
     "auth0-js": "^9.0.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "http-server": "^0.11.1"
   },
   "devDependencies": {
-    "serve": "^7.0.0",
     "auth0-quickstarts-tester": "0.1.0"
   }
 }
